ajout des methodes
